--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "sentence-transformers",
     "redis",
     "networkx",
-    "streamlit"
+    "streamlit",
+    "google-genai>=1.61.0",
 ]
 
 [tool.uv]
