--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,28 @@ dependencies = [
     "google-genai>=1.61.0",
 ]
 
-[tool.uv]
-dev-dependencies = [
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
     "pytest",
     "black",
     "ruff",
     "mypy"
+]
+
+[tool.hatch.build.targets.wheel]
+packages = [
+    "src/agents",
+    "src/api",
+    "src/core",
+    "src/detection",
+    "src/evaluations",
+    "src/graph",
+    "src/llm",
+    "src/rag",
+    "src/security",
+    "src/ui",
 ]
