--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "python-dotenv",
     "google-genai>=0.1.0",
+    "numpy>=2.2.6",
 ]
 
 [build-system]
