--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "python-dotenv",
     "google-genai>=0.1.0",
     "numpy>=2.2.6",
+    "scikit-learn>=1.7.2",
 ]
 
 [build-system]
